copy, design, structure

--- a/src/pages/books.astro
+++ b/src/pages/books.astro
@@ -1,6 +1,6 @@
 ---
 import AboutHeroImage from '../assets/blog-placeholder-about.jpg';
-import Layout from '../layouts/BlogPost.astro';
+import Layout from '../layouts/Books.astro';
 ---
 
 <Layout
@@ -9,8 +9,7 @@ import Layout from '../layouts/BlogPost.astro';
 	pubDate={new Date()}
 	heroImage={AboutHeroImage}
 >
-    <h1>Books</h1>
-    <p>Here’s a list of books I’ve read or recommend.</p>
+    <h1>Books I've read</h1>
   
     <ul>
       <li>Life and Fate — Vasily Grossman</li>
