--- a/src/layouts/Books.astro
+++ b/src/layouts/Books.astro
@@ -16,4 +16,29 @@ const { title, description = "Blake Maczka's personal website" } = Astro.props;
 			<slot />
 		</main>
 	</body>
+
+	<style>
+		main {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			padding: 2em 1em;
+		}
+		
+		main h1 {
+			margin-bottom: 1.5em;
+		}
+		
+		main ul {
+			padding: 0;
+			display: flex;
+		}
+		
+		main li {
+			margin-bottom: 0.5em;
+			font-size: 1.2em;
+			text-align: left;
+			width: fit-content;
+		}
+	</style>
 </html>
