--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -89,7 +89,7 @@ const posts = (await getCollection('blog')).sort(
 		<Header />
 		<main>
 			<section>
-				<ul>
+				<!-- <ul>
 					{
 						posts.map((post) => (
 							<li>
@@ -105,7 +105,10 @@ const posts = (await getCollection('blog')).sort(
 							</li>
 						))
 					}
-				</ul>
+				</ul> -->
+				<p>
+					Coming soon
+				</p>
 			</section>
 		</main>
 	</body>
