fix mobile header

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -83,5 +83,18 @@ import HeaderLink from './HeaderLink.astro';
 		.social-links {
 			display: none;
 		}
+		
+		h2 {
+			display: none;
+		}
+		
+		nav {
+			justify-content: center;
+		}
+		
+		.internal-links {
+			position: static;
+			transform: none;
+		}
 	}
 </style>
