--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -14,7 +14,7 @@ const posts = (await getCollection('blog')).sort(
 <!doctype html>
 <html lang="en">
 	<head>
-		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+		<BaseHead title="Things I've Written" description={SITE_DESCRIPTION} />
 		<style>
 			main {
 				width: 960px;
@@ -89,11 +89,11 @@ const posts = (await getCollection('blog')).sort(
 		<Header />
 		<main>
 			<section>
-				<!-- <ul>
+				<ul>
 					{
 						posts.map((post) => (
 							<li>
-								<a href={`/blog/${post.id}/`}>
+								<a href={`/blog/${post.slug}/`}>
 									{post.data.heroImage && (
 										<Image width={720} height={360} src={post.data.heroImage} alt="" />
 									)}
@@ -105,10 +105,7 @@ const posts = (await getCollection('blog')).sort(
 							</li>
 						))
 					}
-				</ul> -->
-				<p>
-					Coming soon
-				</p>
+				</ul>
 			</section>
 		</main>
 	</body>
