--- a/src/pages/books.astro
+++ b/src/pages/books.astro
@@ -4,7 +4,7 @@ import Layout from '../layouts/Books.astro';
 ---
 
 <Layout
-	title="Books"
+	title="Books I've Read"
 	description="A curated list of books I've read and recommend"
 	pubDate={new Date()}
 	heroImage={AboutHeroImage}
