--- a/src/layouts/AboutMe.astro
+++ b/src/layouts/AboutMe.astro
@@ -5,7 +5,7 @@ import Header from '../components/Header.astro';
 
 type Props = CollectionEntry<'blog'>['data'];
 
-const { title, description, heroImage } = Astro.props;
+const { title, description } = Astro.props;
 ---
 
 <html lang="en">
